--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "node-sass": "^3.4.2",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
@@ -45,6 +47,8 @@
     "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.6.0"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "redux": "^3.5.2"
   }
 }
